[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/UIElements/inventoryWindow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/UI/battleScene.gd" type="Script" id=2]
[ext_resource path="res://Art/CharacterSprites/PlayerModel/novicePyromancer.png" type="Texture" id=3]
[ext_resource path="res://Art/CharacterSprites/emptySlot.png" type="Texture" id=4]
[ext_resource path="res://GB Sound Assets/the-bards-tale-63078.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.0784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="battleScene" type="Node2D"]
script = ExtResource( 2 )

[node name="mainBackground" type="TextureRect" parent="."]
margin_right = 440.0
margin_bottom = 225.0
rect_scale = Vector2( 2.048, 2 )
texture = ExtResource( 1 )

[node name="enemyPortrait" type="TextureRect" parent="."]
margin_left = 480.0
margin_top = 150.0
margin_right = 544.0
margin_bottom = 214.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="enemyHPBar" type="ProgressBar" parent="enemyPortrait"]
margin_left = -66.0
margin_top = -25.0
margin_right = 134.0
margin_bottom = -5.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="playerPortrait" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 250.0
margin_right = 344.0
margin_bottom = 314.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="playerHPBar" type="ProgressBar" parent="playerPortrait"]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 84.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="partyMember2" type="TextureRect" parent="."]
visible = false
margin_left = 380.0
margin_top = 250.0
margin_right = 444.0
margin_bottom = 314.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="p2HPBar" type="ProgressBar" parent="partyMember2"]
visible = false
margin_top = 64.0
margin_right = 64.0
margin_bottom = 84.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="partyMember3" type="TextureRect" parent="."]
visible = false
margin_left = 480.0
margin_top = 250.0
margin_right = 544.0
margin_bottom = 314.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="p3HPBar" type="ProgressBar" parent="partyMember3"]
visible = false
margin_top = 64.0
margin_right = 64.0
margin_bottom = 84.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="partyMember4" type="TextureRect" parent="."]
visible = false
margin_left = 580.0
margin_top = 250.0
margin_right = 644.0
margin_bottom = 314.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="p4HPBar" type="ProgressBar" parent="partyMember4"]
visible = false
margin_top = 64.0
margin_right = 64.0
margin_bottom = 84.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="partyMember5" type="TextureRect" parent="."]
visible = false
margin_left = 680.0
margin_top = 250.0
margin_right = 744.0
margin_bottom = 314.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="p5HPBar" type="ProgressBar" parent="partyMember5"]
visible = false
margin_top = 64.0
margin_right = 64.0
margin_bottom = 84.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="attackButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 130.0
margin_bottom = 80.0
text = "Attack"

[node name="itemButton" type="Button" parent="."]
margin_left = 140.0
margin_top = 30.0
margin_right = 240.0
margin_bottom = 80.0
text = "Bag"

[node name="fleeBattle" type="Button" parent="."]
margin_left = 250.0
margin_top = 30.0
margin_right = 350.0
margin_bottom = 80.0
text = "Flee"

[node name="firstText" type="Label" parent="."]
margin_left = 30.0
margin_top = 480.0
margin_right = 994.0
margin_bottom = 510.0

[node name="secondText" type="Label" parent="."]
margin_left = 30.0
margin_top = 510.0
margin_right = 994.0
margin_bottom = 540.0

[node name="thirdText" type="Label" parent="."]
margin_left = 30.0
margin_top = 540.0
margin_right = 994.0
margin_bottom = 570.0

[node name="endScreen" type="TextureRect" parent="."]
visible = false
margin_right = 440.0
margin_bottom = 225.0
rect_scale = Vector2( 2.048, 2 )
texture = ExtResource( 1 )

[node name="captureButton" type="Button" parent="endScreen"]
visible = false
margin_left = 300.0
margin_top = 220.0
margin_right = 410.0
margin_bottom = 270.0
text = "Capture Enemy"

[node name="nextLevelButton" type="Button" parent="endScreen"]
visible = false
margin_left = 90.0
margin_top = 220.0
margin_right = 200.0
margin_bottom = 270.0
text = "Next Level"

[node name="returnToMenu" type="Button" parent="endScreen"]
visible = false
margin_left = 180.0
margin_top = 220.0
margin_right = 300.0
margin_bottom = 270.0
text = "Return To Menu"

[node name="resultHeader" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 20.0
margin_right = 75.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "Result of battle : Lose"
align = 1
valign = 1

[node name="firstText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 90.0
align = 1
valign = 1

[node name="secondText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0
align = 1
valign = 1

[node name="thirdText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 110.0
margin_right = 200.0
margin_bottom = 130.0
align = 1
valign = 1

[node name="fourthText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 130.0
margin_right = 200.0
margin_bottom = 150.0
align = 1
valign = 1

[node name="fifthText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 150.0
margin_right = 200.0
margin_bottom = 170.0
align = 1
valign = 1

[node name="sixthText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 170.0
margin_right = 200.0
margin_bottom = 190.0
align = 1
valign = 1

[node name="seventhText" type="Label" parent="endScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 190.0
margin_right = 200.0
margin_bottom = 210.0
align = 1
valign = 1

[node name="partyFull" type="Label" parent="endScreen"]
visible = false
margin_left = 307.129
margin_top = 228.5
margin_right = 404.129
margin_bottom = 259.5
text = "Party Full,
Cannot Capture"

[node name="Backgroundmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="attackButton" to="." method="_on_attackButton_pressed"]
[connection signal="pressed" from="itemButton" to="." method="_on_itemButton_pressed"]
[connection signal="pressed" from="fleeBattle" to="." method="_on_fleeBattle_pressed"]
[connection signal="pressed" from="endScreen/captureButton" to="." method="_on_captureButton_pressed"]
[connection signal="pressed" from="endScreen/nextLevelButton" to="." method="_on_nextLevelButton_pressed"]
[connection signal="pressed" from="endScreen/returnToMenu" to="." method="_on_returnToMenu_pressed"]
